Bug 818933 - Provide a hardware release API so that we don't have to rely on CC of CameraControl objects. r=kanru, a=blocking-basecamp